pilot/pkg/security/authz/builder/testdata/simple-policy-td-aliases-out.yaml
name: envoy.filters.http.rbac
typedConfig:
  '@type': type.googleapis.com/envoy.config.filter.http.rbac.v2.RBAC
  rules:
    policies:
      ns[foo]-policy[httpbin]-rule[0]:
        permissions:
        - andRules:
            rules:
            - orRules:
                rules:
                - header:
                    exactMatch: rule[0]-to[0]-method[0]
                    name: :method
        principals:
        - andIds:
            ids:
            - orIds:
                ids:
                - metadata:
                    filter: istio_authn
                    path:
                    - key: source.principal
                    value:
                      stringMatch:
                        exact: td1/ns/rule[0]/sa/from[0]-principal[0]
                - metadata:
                    filter: istio_authn
                    path:
                    - key: source.principal
                    value:
                      stringMatch:
                        exact: cluster.local/ns/rule[0]/sa/from[0]-principal[0]
        - andIds:
            ids:
            - orIds:
                ids:
                - metadata:
                    filter: istio_authn
                    path:
                    - key: source.principal
                    value:
                      stringMatch:
                        exact: td1/ns/rule[0]/sa/from[1]-principal[0]
                - metadata:
                    filter: istio_authn
                    path:
                    - key: source.principal
                    value:
                      stringMatch:
                        exact: cluster.local/ns/rule[0]/sa/from[1]-principal[0]
                - metadata:
                    filter: istio_authn
                    path:
                    - key: source.principal
                    value:
                      stringMatch:
                        exact: td1/ns/rule[0]/sa/from[1]-principal[1]
                - metadata:
                    filter: istio_authn
                    path:
                    - key: source.principal
                    value:
                      stringMatch:
                        exact: cluster.local/ns/rule[0]/sa/from[1]-principal[1]
            - orIds:
                ids:
                - metadata:
                    filter: istio_authn
                    path:
                    - key: source.principal
                    value:
                      stringMatch:
                        safeRegex:
                          googleRe2: {}
                          regex: .*/ns/rule[0]-from[1]-ns[0]/.*
      ns[foo]-policy[httpbin]-rule[1]:
        permissions:
        - andRules:
            rules:
            - orRules:
                rules:
                - header:
                    exactMatch: rule[1]-to[0]-method[0]
                    name: :method
        principals:
        - andIds:
            ids:
            - orIds:
                ids:
                - metadata:
                    filter: istio_authn
                    path:
                    - key: source.principal
                    value:
                      stringMatch:
                        exact: td1/ns/rule[1]/sa/from[0]-principal[0]
                - metadata:
                    filter: istio_authn
                    path:
                    - key: source.principal
                    value:
                      stringMatch:
                        exact: cluster.local/ns/rule[1]/sa/from[0]-principal[0]
